--- a/app/src/main/res/drawable/my_message.xml
+++ b/app/src/main/res/drawable/my_message.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#659A86" />
+    <solid android:color="#128c7e" />
     <corners
         android:topLeftRadius="10dp"
         android:bottomLeftRadius="10dp"
