--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="primary_text">#212121</color>
     <color name="multiselect_done">#388e3c</color>
     <color name="error_text">#b71c1c</color>
+    <color name="green">#128c7e</color>
 </resources>
