--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout   xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,51 +18,64 @@
             android:layout_height="56dp"
             android:fitsSystemWindows="true"
             app:layout_scrollFlags="scroll|enterAlways">
-            <RelativeLayout
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/main_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="56dp"
-                    android:gravity="center"
-                    android:minHeight="?actionBarSize"
-                    android:padding="@dimen/appbar_padding"
-                    android:text="@string/app_name"
-                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
-                    app:layout_collapseMode="parallax" />
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:id="@+id/my_profile_image"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    app:layout_collapseMode="parallax"
-                    android:src="@drawable/no_profile"/>
-            </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/my_profile_image"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:src="@drawable/no_profile"
+                        app:layout_collapseMode="parallax" />
+
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="56dp"
+                        android:layout_toRightOf="@+id/my_profile_image"
+                        android:gravity="center"
+                        android:minHeight="?actionBarSize"
+                        android:padding="@dimen/appbar_padding"
+                        android:text="@string/app_name"
+                        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
+                        app:layout_collapseMode="parallax" />
+
+
+                </RelativeLayout>
+            </androidx.appcompat.widget.Toolbar>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
+
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
-            app:tabMaxWidth="0dp"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            app:tabGravity="fill"
-            android:layoutMode="clipBounds"
-            app:tabIndicatorGravity="bottom"
-            app:tabSelectedTextColor="#7DBBFF"
-            app:tabTextColor="@color/white"
             android:layout_gravity="bottom"
+            android:background="?attr/colorPrimary"
+            android:layoutMode="clipBounds"
             app:layout_collapseMode="pin"
-            android:background="?attr/colorPrimary" />
+            app:tabGravity="fill"
+            app:tabIndicatorGravity="bottom"
+            app:tabMaxWidth="0dp"
+            app:tabSelectedTextColor="#7DBBFF"
+            app:tabTextColor="@color/white" />
     </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
-        android:background="@color/colorPrimaryDark"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        android:background="@color/colorPrimaryDark"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
