--- a/app/src/main/res/drawable/not_seen_status_indicator.xml
+++ b/app/src/main/res/drawable/not_seen_status_indicator.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="1dp" />
-    <solid android:color="#bb2E2C2C"/>
+    <corners android:radius="65dp" />
     <stroke
-        android:width="1dp"
-        android:color="@color/text_color" />
+        android:width="2dp"
+        android:color="@color/green" />
 </shape>
