--- a/app/src/main/res/layout/chat_listitem.xml
+++ b/app/src/main/res/layout/chat_listitem.xml
@@ -3,8 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginEnd="10dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginTop="3dp"
+    app:layout_goneMarginStart="3dp"
     android:maxWidth="250dp"
     app:cardCornerRadius="5dp">
 
@@ -15,18 +17,6 @@
             android:layout_width="wrap_content"
             android:background="@drawable/my_message"
             android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/name"
-                android:textColor="@android:color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/message"
-                android:paddingStart="8dp"
-                android:text="@string/shubham_meher"
-                android:layout_gravity="start"
-                android:textSize="12sp"
-                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/message"
