--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -2,12 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
-    <androidx.recyclerview.widget.RecyclerView
-        android:background="@color/colorPrimaryDark"
+
+    <TextView
+        android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="8dp"
-        android:id="@+id/recyclerView_my_contacts"/>
+        android:layout_height="wrap_content"
+        android:layout_marginStart="46dp"/>
 </LinearLayout>
