--- a/app/src/main/res/layout/activity_view_status.xml
+++ b/app/src/main/res/layout/activity_view_status.xml
@@ -2,15 +2,17 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/view_status_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ViewStatus">
+
     <ImageView
         android:id="@+id/status_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,11 +34,12 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="10dp"
             android:src="@drawable/no_profile" />
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="7dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:layout_marginTop="7dp"
             android:layout_marginEnd="5dp"
             android:orientation="vertical">
 
@@ -58,10 +61,26 @@
 
         </LinearLayout>
     </LinearLayout>
+
     <ProgressBar
+        android:id="@+id/progress"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/view_status_message"
+        android:paddingStart="30dp"
+        android:paddingEnd="30dp"
+        android:gravity="center"
+        android:maxLines="5"
+        android:background="@color/colorPrimaryDark"
+        android:alpha="0.7"
+        android:textColor="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:id="@+id/progress"
-        />
+        android:layout_gravity="bottom"
+        android:lineSpacingExtra="1dp"
+        android:layout_marginBottom="30dp"
+        android:textSize="18sp" />
 </FrameLayout>
