--- a/app/src/main/res/layout/parent_recycler_view_item.xml
+++ b/app/src/main/res/layout/parent_recycler_view_item.xml
@@ -7,9 +7,9 @@
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/header"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="3dp"
+        android:paddingStart="18dp"
+        android:paddingTop="3dp"
+        android:paddingBottom="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <androidx.recyclerview.widget.RecyclerView
