--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <group>
-         <item
+
+
+    <item
+        android:id="@+id/maps"
+        android:icon="@drawable/ic_baseline_map_24"
+        android:title="Maps"
+        app:showAsAction="always" />
+
+
+    <item
+        android:id="@+id/settings"
+        android:title="Settings"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/log_out"
-        app:showAsAction="never"
-        android:title="Log Out" />
-    </group>
+        android:title="Log Out"
+        app:showAsAction="never" />
 
 </menu>
