--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB2vGEhfRK3tkBUPtJSc1Z5id8bfEIqw2o</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">"Your key"</string>
 </resources>
